# Rust-Boot-Book

./: README.md
first_bin/: Cargo.toml
first_bin/.cargo/: config
first_bin/board/: raspberry_pi4_linker.ld
first_bin/src/: main.rs
hello_world_uart/: Cargo.toml
hello_world_uart/scripts/: run_image.sh
hello_world_uart/src/: boot.S  main.rs
